add keywellcs4 left and right to build.yaml

--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: helix_left
+    shield: keywellcs4_left
   - board: nice_nano_v2
-    shield: helix_right
+    shield: keywellcs4_right
