--- a/config/keywellcs4.conf
+++ b/config/keywellcs4.conf
@@ -1,6 +1,8 @@
 # Copyright (c) 2020 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
+CONFIG_ZMK_POINTING=y
+
 # Enables RGB functionality (Uncomment lines below to enable.)
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
