--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -5,7 +5,7 @@
 #include <dt-bindings/zmk/pointing.h>
 #include <input/processors.dtsi>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
-
+#include <behaviors/mouse_keys.dtsi>
 // Based on @caksoylar's config, defaults in comments
 &mmv {
   acceleration-exponent = <1>;          // 1
