--- a/config/includes/mouse.dtsi
+++ b/config/includes/mouse.dtsi
@@ -21,11 +21,11 @@
 
 &mmv_input_listener {
   warp {
-    layers = <NAV>;
+    layers = <WARP>;
     input-processors = <&zip_xy_scaler 3 1>;
   };
   precision {
-    layers = <NAV_1>;
+    layers = <PRESISION>;
     input-processors = <&zip_xy_scaler 1 3>;
   };
 };
@@ -42,11 +42,11 @@
 
 &msc_input_listener {
   warp {
-    layers = <NAV>;
+    layers = <WARP>;
     input-processors = <&zip_scroll_scaler 2 1>;
   };
   precision {
-    layers = <NAV_1>;
+    layers = <PRESISION>;
     input-processors = <&zip_scroll_scaler 1 2>;
   };
 };
